Update student view with sub navigation

--- a/app/assets/stylesheets/modules/_controls.styl
+++ b/app/assets/stylesheets/modules/_controls.styl
@@ -1,3 +1,23 @@
+// Sub Navigation
+
+nav.sub-navigation
+  background smoke
+  ul
+    border-radius 0.5rem
+    text-align right
+    width 100%
+    li
+      display inline-block
+      font-family $header-font
+      font-size 2rem
+      margin-left 20px
+  .button.active
+    background dove
+    color smoke
+    cursor default
+  .button.disabled, a[disabled]
+    pointer-events none
+
 // Controls
 
 .controls
