--- a/app/assets/stylesheets/modules/_students.styl
+++ b/app/assets/stylesheets/modules/_students.styl
@@ -1,2 +1,10 @@
 .sandbox-link
   font-size: 80%
+
+.users-control
+  text-align right
+
+.sort-select.users
+  float right
+  padding-left 10px
+  position static
