Restructure Student View
- Restructure Student files
- Add more details to the first and second view

--- a/app/assets/stylesheets/modules/_students.styl
+++ b/app/assets/stylesheets/modules/_students.styl
@@ -4,7 +4,48 @@
 .users-control
   text-align right
 
+.users-articles
+  display flex
+  aside.student-selection
+    flex 1
+    ul
+      list-style none
+      li.student
+        background white
+        border 1px solid #DDDDDD
+        margin 5px 0
+        padding 15px
+        &.selected
+          background #676eb4
+          color white
+        p
+          margin-bottom 0
+        .real-name
+          font-weight bold
+  article.student-details
+    flex 4
+    padding 5px 30px
+    section.assignments
+      h4
+        color #6A6A6A
+    .no-selected-student
+      border 2px dashed #AAAAAA
+      display flex
+      flex-direction column
+      padding 45px 15px
+      text-align center
+      h4
+        margin-bottom 5px
+  article.assignments-list
+    font-size 12px
+    h4.assignments-list-title
+      margin 30px 0 0
+    .current-status span
+      color #676eb4
+      font-weight bold
+      padding 3px
 .sort-select.users
-  float right
-  padding-left 10px
+  display inline-block
+  float none
+  margin 0 10px
   position static
