Include buttons for assigning articles on students tab

--- a/app/assets/stylesheets/modules/_students.styl
+++ b/app/assets/stylesheets/modules/_students.styl
@@ -38,6 +38,20 @@
         margin-bottom 5px
   article.assignments-list
     font-size 12px
+    aside.header
+      display flex
+      flex-direction row
+      h3
+        flex 1
+        font-size 18px
+        margin 10px 0
+      .button-actions
+        flex 2
+        text-align right
+    .no-assignments
+      font-size 14px
+      padding 30px
+      text-align center
     h4.assignments-list-title
       margin 30px 0 0
     .current-status span
