Add Related Links to Student View for Instructors
- Move action links to common folder
- Show relevant links per student on Instructor View

--- a/app/assets/stylesheets/modules/_students.styl
+++ b/app/assets/stylesheets/modules/_students.styl
@@ -28,6 +28,8 @@
     section.assignments
       h4
         color #6A6A6A
+      p.assignment-links
+        margin-bottom 3px
     .no-selected-student
       border 2px dashed #AAAAAA
       display flex
