Update Students Exercises tab with relevant information

--- a/app/assets/stylesheets/modules/_timeline.styl
+++ b/app/assets/stylesheets/modules/_timeline.styl
@@ -274,9 +274,9 @@ h4.timeline-exercise
 
 
 .training-module, .student-training-module
-  .overdue
+  .unread, .overdue
     color warning
-  .completed
+  .complete, .completed
     color $success_text
   small.due-date
     margin-left 5px
