Sort and color module completion on student exercises page

--- a/app/assets/stylesheets/modules/_students.styl
+++ b/app/assets/stylesheets/modules/_students.styl
@@ -4,6 +4,10 @@
 .users-control
   text-align right
 
+.students-exercise
+  .modules-complete
+    color $text
+
 .users-articles
   display flex
   aside.student-selection
