Update titles for Student View

--- a/app/assets/stylesheets/modules/_controls.styl
+++ b/app/assets/stylesheets/modules/_controls.styl
@@ -2,6 +2,10 @@
 
 nav.sub-navigation
   background smoke
+  display flex
+  h3
+    margin 10px
+    width 50%
   ul
     border-radius 0.5rem
     text-align right
